manifest-lunaria/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i18n-mutanuq
  namespace: i18n-mutanuq
  labels:
    app: i18n-mutanuq
spec:
  replicas: 3
  selector:
    matchLabels:
      app: i18n-mutanuq
  template:
    metadata:
      labels:
        app: i18n-mutanuq
    spec:
      containers:
        - name: i18n-mutanuq
          image: "trueberryless/i18n-mutanuq:0.3.0"
          imagePullPolicy: Always
