manifest-lunaria/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: i18n-mutanuq
    namespace: mutanuq
    annotations:
        cert-manager.io/issuer: acme-issuer
spec:
    selector:
        app: i18n-mutanuq
    ports:
        - name: http
          port: 80
