manifest-lunaria/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: i18n-mutanuq
    namespace: mutanuq
spec:
    rules:
        - host: i18n-mutanuq.trueberryless.org
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: i18n-mutanuq
                            port:
                                number: 80

    tls:
        - hosts:
              - i18n-mutanuq.trueberryless.org
          secretName: i18n-mutanuq
